--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,11 +39,12 @@ jobs:
         id: meta_builder # referenced from later step
         uses: docker/metadata-action@v3
         with:
-          images: ghcr.io/tiiuae/fog-ros-baseimage
+          images: ghcr.io/tiiuae/fog-ros-baseimage-builder
           tags: |
-            type=ref,event=branch,prefix=builder-
-            type=raw,value=builder-latest,enable=${{ github.ref == format('refs/heads/{0}', github.event.repository.default_branch) }}
-            type=sha,prefix=builder-
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=sha
 
       - name: Build and push base image
         uses: docker/build-push-action@v2
