--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,10 +15,10 @@ jobs:
     name: fog-ros-baseimage
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -26,7 +26,7 @@ jobs:
 
       - name: Container metadata
         id: meta # referenced from later step
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v4
         with:
           images: ghcr.io/tiiuae/fog-ros-baseimage
           tags: |
@@ -37,7 +37,7 @@ jobs:
 
       - name: Container metadata for builder
         id: meta_builder # referenced from later step
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v4
         with:
           images: ghcr.io/tiiuae/fog-ros-baseimage-builder
           tags: |
@@ -46,8 +46,19 @@ jobs:
             type=semver,pattern={{version}}
             type=sha
 
+      - name: Container metadata for coverity
+        id: meta_coverity # referenced from later step
+        uses: docker/metadata-action@v4
+        with:
+          images: ghcr.io/tiiuae/fog-ros-baseimage-builder-coverity
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=sha
+
       - name: Build and push base image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         if: github.event_name == 'push'
         with:
           push: true
@@ -56,7 +67,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Build and push builder
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         if: github.event_name == 'push'
         with:
           push: true
@@ -64,3 +75,18 @@ jobs:
           file: Dockerfile.builder
           tags: ${{ steps.meta_builder.outputs.tags }}
           labels: ${{ steps.meta_builder.outputs.labels }}
+
+      - name: Build and push coverity # Needs to be last because it depends on the builder image built above
+        uses: docker/build-push-action@v4
+        if: github.event_name == 'push'
+        with:
+          push: true
+          context: .
+          file: Dockerfile.coverity
+          tags: ${{ steps.meta_coverity.outputs.tags }}
+          labels: ${{ steps.meta_coverity.outputs.labels }}
+          build-args: |
+            "COVERITY_DOCKER_REGISTRY_USERNAME=${{ secrets.COVERITY_DOCKER_REGISTRY_USERNAME }}"
+            "COVERITY_DOCKER_REGISTRY_ACCESS_TOKEN=${{ secrets.COVERITY_DOCKER_REGISTRY_ACCESS_TOKEN }}"
+            "COVERITY_LICENSE_DAT_B64=${{ secrets.COVERITY_LICENSE_DAT_B64 }}"
+            "COVERITY_ACCESS_TOKEN_B64=${{ secrets.COVERITY_ACCESS_TOKEN_B64 }}"
