--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -81,7 +81,8 @@ jobs:
 
       - name: Build and push coverity # Needs to be last because it depends on the builder image built above
         uses: docker/build-push-action@v4
-        if: github.event_name == 'push'
+        # upload on push event or if manually triggered on the main branch
+        if: github.event_name == 'push' || ( github.event_name == 'workflow_dispatch' && endsWith(github.ref, github.event.repository.default_branch) )
         with:
           push: true
           context: .
